# governed-agents-demo

./: .env.example  .gitignore  DEMO_SCRIPT.md  Makefile  README.md  RESULTS.md  TALK.md  docker-compose.yml  pyproject.toml
scripts/: audit_viewer.py
src/governed_agents/: llm.py  policy.yaml  producer.py
src/governed_agents/client/: agent.py  replay.py
src/governed_agents/server/: app.py  approvals.py  identity.py  tools.py
tests/: test_smoke.py
transcripts/: canonical.json
