[project]
name = "governed-agents-demo"
version = "0.1.0"
description = "Engineering governed agentic systems on real-time data — talk demo (IEEE Central Indiana)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Gajendra Babu Thokala" }]
dependencies = [
    "fastmcp>=3.0.0",
    "confluent-kafka>=2.5.0",
    "anthropic>=0.40.0",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
